objects/copado__Promoted_User_Story__c.object
<CustomObject>
    <fields>
        <fullName>Block_Save__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Block Save</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>ExternalID</label>
        <length>33</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreventSave__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PreventSave</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Promotion__c</fullName>
        <label>Promotion</label>
        <referenceTo>copado__Promotion__c</referenceTo>
        <relationshipLabel>Promoted User Stories</relationshipLabel>
        <relationshipName>Promoted_User_Stories</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <description>The status Outdated invalidates that this user story got promoted. The user story will be available again for automated promotions and back promotions if applicable.</description>
        <label>Active / Outdated</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Outdated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__User_Story__c</fullName>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>User Story Promotions</relationshipLabel>
        <relationshipName>Promoted_User_Stories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Promoted User Story</label>
    <nameField>
        <label>Promoted User Story Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promoted User Stories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Block_Save_Promoted_US</fullName>
        <active>true</active>
        <errorConditionFormula>Block_Save__c  = True</errorConditionFormula>
        <errorMessage>You dont have permission - Promoted user story</errorMessage>
    </validationRules>
</CustomObject>